Fixes infowindow z-index

--- a/portal-web/trunk/src/main/webapp/less/infowindow.less
+++ b/portal-web/trunk/src/main/webapp/less/infowindow.less
@@ -140,7 +140,7 @@
   text-align: left;
   color: @cGray1;
 
-  z-index: 500;
+  z-index: 500000;
 }
 
 #content div.infowindow h2 {
