--- a/portal-web/trunk/src/main/webapp/less/style.less
+++ b/portal-web/trunk/src/main/webapp/less/style.less
@@ -3573,7 +3573,7 @@ article.static {
   height: 100%;
   opacity: .5;
   background: white;
-  z-index: 400;
+  z-index: 400000;
 }
 
 #content article.raw .content .left {
